--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -38,7 +38,7 @@
     content: "";
     width: 100%;
     height: 100%;
-    background-image: url("../assets/bg.svg");
+    background-image: url("../assets/b1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
